<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="30dp"
    tools:context=".TableLayoutActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Table layout login"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/table_layout_color"
        android:padding="20dp"
        android:orientation="vertical"
        android:stretchColumns="1"
        >
        <TableRow android:padding="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:text="@string/table_layout_login_title"
                android:textColor="#0ff"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/table_layout_username_label"
                android:textColor="#fff"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/userName"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:background="#fff"
                android:hint="@string/table_layout_username_placeholder"
                android:padding="5dp"
                android:textColor="#000" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/table_layout_password_label"
                android:textColor="#fff"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/password"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:background="#fff"
                android:hint="@string/table_layout_password_placeholder"
                android:padding="5dp"
                android:textColor="#000" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">
            <Button
                android:id="@+id/login_button"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="2"
                android:background="#0ff"
                android:text="@string/table_layout_login_button"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>
</LinearLayout>